--- a/src/.env
+++ b/src/.env
@@ -1,16 +1,17 @@
-USERNAME = root
-PASSWORD = $725666akaFB
+USERNAME = complete!
+PASSWORD = complete!
 PORT = 3000
 SECRET_KEY = claveSecreta
 
 //SENTENCIAS SQL PARA DATOS DE USUARIO
 
-GET_USERS = SELECT * FROM usuarios;
+GET_USERS = SELECT id, usuario, email, nombre, apellido, telefono, direccion_envio FROM usuarios;
 LOAD_USER = INSERT INTO usuarios (usuario, email, contrasena, nombre, apellido, telefono, direccion_envio, es_admin) VALUES (:usuario, :email, :contrasena, :nombre, :apellido, :telefono, :direccion_envio, 0);
 GET_USER_BY_USERNAME = SELECT * FROM usuarios WHERE usuario = ?
 GET_USER_BY_EMAIL = SELECT * FROM usuarios WHERE email = ?
 DELETE_USER = DELETE FROM usuarios WHERE usuario = ?
-GET_USER_BY_USERNAME_EMAIL = SELECT * FROM usuarios WHERE usuario = ? OR email = ?
+GET_USER_BY_USERNAME_EMAIL = SELECT id, usuario, email, nombre, apellido, telefono, direccion_envio FROM usuarios WHERE usuario = ? OR email = ?
+GET_USER_BY_USERNAME_EMAIL_COMPLETE = SELECT * FROM usuarios WHERE usuario = ? OR email = ?;
 
 SENTENCIAS SQL PARA DATOS DE PRODUCTOS
 
