--- a/src/.env
+++ b/src/.env
@@ -1,5 +1,5 @@
-USERNAME = complete!
-PASSWORD = complete!
+USERNAME = root
+PASSWORD = $725666akaFB
 PORT = 3000
 SECRET_KEY = claveSecreta
 
@@ -34,6 +34,7 @@ LOAD_ORDER = INSERT INTO pedidos (id_usuario, id_estado, hora, id_forma_pago) VA
 UPDATE_ORDER = UPDATE pedidos SET descripcion = ?, importe_final = ? WHERE id = ?; 
 UPDATE_ORDER_STATE = UPDATE pedidos SET id_estado = ? WHERE id = ?;
 GET_ORDER = SELECT * FROM pedidos WHERE id = ?;
+DELETE_ORDER = DELETE FROM pedidos WHERE id = ?;
 
 GET_FAVORITES = SELECT DISTINCT productos.url_imagen, productos.descripcion, productos.precio FROM detalle_pedido INNER JOIN productos ON detalle_pedido.id_producto = productos.id INNER JOIN pedidos ON detalle_pedido.id_pedido = pedidos.id INNER JOIN usuarios ON pedidos.id_usuario = ?;
 GET_ORDER_PRODUCTS = SELECT DISTINCT productos.url_imagen, detalle_pedido.q_unidades, productos.descripcion, detalle_pedido.subtotal FROM detalle_pedido INNER JOIN productos ON detalle_pedido.id_producto = productos.id INNER JOIN pedidos ON detalle_pedido.id_pedido = ?;
